--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,10 @@
       {{> footer}}
     </footer>
   </div><!--/.fluid-container-->
+  {{> about}}
+  {{> privacy}}
+  {{> tos}}
+  {{> contactus}}
 </body>
 
 
